# columnar

./: .gitignore  CHANGELOG.md  COPYRIGHT  Cargo.toml  README.md  release-plz.toml
.github/workflows/: test.yml
benches/: bench.rs  derived_cursor.rs  ops.rs  options_cursor.rs  repeats_cursor.rs  serde.rs  simd.rs
columnar_derive/: CHANGELOG.md  Cargo.toml
columnar_derive/src/: lib.rs
examples/: decode_asm.rs  decode_bench.rs  enum_as_bytes_asm.rs  example.rs  json.rs  stash_bench.rs  tree.rs
presentation/: presentation.md
src/: arc.rs  boxed.rs  bytes.rs  chain_mod.rs  column_vector.rs  columnar.rs  common.rs  lib.rs  lookback.rs  main.rs  maps.rs  primitive.rs  rc.rs  roaring.rs  sequence.rs  sizes.rs  string.rs  sums.rs  tuple.rs  vector.rs
src/adts/: art.rs  json.rs  mod.rs  tree.rs
test-no-std/: Cargo.toml
test-no-std/src/: lib.rs
