[package]
name = "columnar"
version = "0.2.1"
authors = ["Frank McSherry <fmcsherry@me.com>"]
description = "Conversion from arrays of complex structs to simple structs of arrays"
edition = "2021"

# These URLs point to more information about the repository
documentation = "http://github.com/frankmcsherry/columnar"
homepage = "http://github.com/frankmcsherry/columnar"
repository = "https://github.com/frankmcsherry/columnar.git"
license = "MIT"

[workspace]
members = ["columnar_derive"]

[dependencies]
rmp-serde = "1.3.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = "1.20"
columnar_derive = { path = "columnar_derive", version = "0.2" }

[dev-dependencies]
bencher = "0.1.5"

[profile.test]
opt-level = 2
overflow-checks = false
incremental = false

[profile.bench]
debug = "full"
lto = true
codegen-units = 1

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "serde"
harness = false
