[package]
name = "columnar"
version = "0.10.1"
authors = ["Frank McSherry <fmcsherry@me.com>"]
description = "Conversion from arrays of complex structs to simple structs of arrays"
edition = "2021"
exclude = ["presentation/"]

# These URLs point to more information about the repository
documentation = "http://github.com/frankmcsherry/columnar"
homepage = "http://github.com/frankmcsherry/columnar"
repository = "https://github.com/frankmcsherry/columnar.git"
license = "MIT"

[workspace]
members = ["columnar_derive"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
smallvec = { version = "1.13.2", features = ["const_generics"] }
bytemuck = { version = "1.20", features = ["min_const_generics"] }
columnar_derive = { path = "columnar_derive", version = "0.10" }

[dev-dependencies]
bencher = "0.1.5"
bincode = "1.3.3"
rmp-serde = "1.3.0"
serde_json = "1.0"

[features]
serde = ["dep:serde", "columnar_derive/serde", "smallvec/serde"]

[[example]]
name = "json"
required-features = ["serde"]

[profile.test]
opt-level = 2
overflow-checks = false
incremental = false

[profile.bench]
debug = "full"
lto = true
codegen-units = 1

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "serde"
harness = false
required-features = ["serde"]

[[bench]]
name = "ops"
harness = false

[[bench]]
name = "simd"
harness = false
